hphp/hack/test/typecheck/variadic_args4.php.exp
File "variadic_args4.php", line 8, characters 19-22:
Member meth has the wrong type (Typing[4341])
File "variadic_args4.php", line 8, characters 19-22:
Should have a variadic argument
File "variadic_args4.php", line 4, characters 19-22:
Because of this definition
